src/pages/landing-page/landing-page.scss
@import '../../common/variables.scss';
@import '../../common/mixins.scss';

.landing-page {
  margin: 0;
  background: #f4f4f6;
  min-width: 320px;
  display: flex;
  flex-direction: column;
  min-height: 100%;

  &__main {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    row-gap: 20px;
    flex: 1 0 auto;
    background: url('../../img/landing-main.jpg') no-repeat;
    background-size: cover;
    background-position-y: -70px;
    padding: 70px 134px 20px 140px;
    min-height: 830px;

    @media screen and (max-width: 700px) {
      padding: 70px 50px;
    }

    @media screen and (max-width: 500px) {
      padding: 70px 0 50px;
      align-items: center;
      min-height: auto;
    }

    @media screen and (max-width: 1439px) {
      background-position: center;
    }

    @media screen and (min-height: 1355px) {
      background-position: center;
    }
  }

  &__search-room {
    @media screen and (max-width: 900px) {
      margin: 0 auto;
    }
  }

  &__main-text {
    @include text_type($font-main, 14px, 400, 24px, $color-main-dark);
    margin: 0;
    max-width: 297px;
    text-align: right;
    align-self: end;

    @media screen and (max-width: 500px) {
      align-self: center;
    }
  }

  &__footer {
    flex: 0 0 auto;
  }
}

